Added bin file, modified makefile and started remote comms branch

--- a/src/Makefile
+++ b/src/Makefile
@@ -1,12 +1,16 @@
 #----------------------
 #-------Variables------
 #----------------------
-JFLAGS = -g
+JFLAGS = -g -d ../$(BDIR)
 JC = javac
+BDIR = bin
 CLASSES = \
 	Player.java \
 	Board.java \
 	Game.java \
+	Server.java \
+	Server_network.java \
+	Client_network.java \
 
 #----------------------
 #-------Modules--------
@@ -18,13 +22,18 @@ CLASSES = \
 
 default: all
 
-all: $(CLASSES:.java=.class)
+all: classes
 
-run: all
-	java Game
+classes: $(CLASSES:.java=.class)
+
+run: classes
+	cd .. && cd $(BDIR) && make run
 
 clean:
 	rm -f *.class
 	rm -f *~
 	rm -f *#
+	rm -f ../$(BDIR)/*.class
+	rm -f ../$(BDIR)/*~
+	rm -f ../$(BDIR)/*#
 
