Updated game loop.

--- a/src/Makefile
+++ b/src/Makefile
@@ -12,6 +12,7 @@ CLASSES = \
 	Server_network.java \
 	Client_network.java \
 	KeyboardController.java \
+	GameGraphic.java \
 
 #----------------------
 #-------Modules--------
