Fixed mistake with 'package src'

--- a/src/Makefile
+++ b/src/Makefile
@@ -13,6 +13,7 @@ CLASSES = \
 	Client_network.java \
 	KeyboardController.java \
 	GameGraphic.java \
+	Obstruction.java \
 
 #----------------------
 #-------Modules--------
