Removed unnecessary file and fixed Makefile.

--- a/src/Makefile
+++ b/src/Makefile
@@ -12,8 +12,8 @@ CLASSES = \
 	Server_network.java \
 	Client_network.java \
 	KeyboardController.java \
-	GameGraphic.java \
 	Obstruction.java \
+	Goal.java \
 
 #----------------------
 #-------Modules--------
