Bytt till game thread, lagt till saker i Player, lite ditt lite datt

--- a/src/Makefile
+++ b/src/Makefile
@@ -12,16 +12,16 @@ CLASSES = \
 	ServerThread.java \
 	ClientThread.java \
 	ClientNetwork.java \
-	DatagramClient.java \
 	DatagramClientThread.java \
 	DatagramServerThread.java \
 	Player.java \
 	Board.java \
-	Game.java \
+	GameThread.java \
 	KeyboardController.java \
 	KeyboardController.java \
 	Obstruction.java \
 	Goal.java \
+	Game.java \
 #----------------------
 #-------Modules--------
 #----------------------
