La till ganska mkt kod för att köra spelet som host

--- a/src/Makefile
+++ b/src/Makefile
@@ -8,7 +8,7 @@ CLASSES = \
 	Server.java \
 	PlayerInfo.java \
 	PlayerPosInfo.java \
-	ServerNetwork.java \
+	ServerNetworkThread.java \
 	ServerThread.java \
 	ClientThread.java \
 	ClientNetwork.java \
