Port automatisation, debug mode to test easier, make kill and make rmi, added Id to player, playerinfo, all players are represented by an unique id determined by the server.

--- a/src/Makefile
+++ b/src/Makefile
@@ -37,6 +37,11 @@ classes: $(CLASSES:.java=.class)
 run: classes
 	java Game
 
+rmi:
+	rmiregistry &
+kill:
+	killall "rmiregistry"
+#for pid in $(ps -f | grep "rmiregistry" | awk '{print $2}'); do kill -9 $pid; done;
 clean:
 	rm -f *.class
 	rm -f *~
